--- a/ExternalLogins.Facebook/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ExternalLogins.Facebook/Views/Account/ExternalLoginConfirmation.cshtml
@@ -3,32 +3,30 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>@ViewData["Title"].</h2>
 <h3>Associate your @ViewData["LoginProvider"] account.</h3>
-
-<form asp-controller="Account" asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Association Form</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-
-    <p class="text-info">
-        You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
-        Please enter an email address for this site below and click the Register button to finish
-        logging in.
-    </p>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
+<div class="row">
+    <div class="col-md-6">
+        <p class="text-info">
+            You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
+            If you have a local account, i.e. if you have previously completed the registration process for this website,
+            please sign in to that account in the right hand side panel. If you do not have a local login, please click
+            the <strong>Register</strong> button at the bottom of that right side panel. You will then complete our simple
+            registration process, and then automatically link your Facebook login to this account.
+        </p>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
+</div>
+<div class="col-md-6">
+    <form asp-controller="Account" asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+        <div asp-validation-summary="All" class="text-danger"></div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button type="submit" class="btn btn-default">Register</button>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
+
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
