--- a/ExternalLogins.Facebook/Views/Account/Login.cshtml
+++ b/ExternalLogins.Facebook/Views/Account/Login.cshtml
@@ -1,9 +1,10 @@
 ﻿@using System.Collections.Generic
 @using System.Linq
+@using ExternalLogins.Facebook.ViewModels.Account
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
 @using Microsoft.AspNetCore.Mvc.Rendering
-@model ExternalLogins.Facebook.LoginViewModel
+@model ExternalLogins.Facebook.ViewModels.Account.LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
@@ -14,7 +15,7 @@
 <div class="row">
     <div class="col-md-8">
         <section>
-            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@Model.ReturnUrl" method="post" class="form-horizontal">
+            <form asp-controller="Account" asp-action="Login" asp-all-route-data-test="Hello" method="post" class="form-horizontal">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
@@ -23,8 +24,8 @@
                 <div class="form-group">
                     <label asp-for="Email" class="col-md-2 control-label"></label>
                     <div class="col-md-10">
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                        <input asp-for="UserName" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
