--- a/Code/ExternalLogins.Facebook/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Account/ExternalLoginConfirmation.cshtml
@@ -11,7 +11,7 @@
             <p class="text-info">
                 You've successfully logged in with <strong>@Model.LoginProvider</strong> your Facebook
                 account. If you are registeted on this website, please sign in to that local  account now,
-                and your account will automattically be lined with your <strong>@Model.LoginProvider</strong>.
+                and your account will automattically be linked with your <strong>@Model.LoginProvider</strong>.
 
             <p class="text-info">
                 If you are not registered here, please click the <strong>Register</strong> button. Registering will 
