--- a/Code/ExternalLogin/Views/Account/Login.cshtml
+++ b/Code/ExternalLogin/Views/Account/Login.cshtml
@@ -1,9 +1,7 @@
-﻿@using System.Collections.Generic
+﻿@using System.Linq
 @using ExternalLogins.Models
 @using ExternalLogins.Models.AccountViewModels
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
-@model ExternalLogins.Models.AccountViewModels.LoginViewModel
+@model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
