--- a/Code/ExternalLogin/Views/Shared/Error.cshtml
+++ b/Code/ExternalLogin/Views/Shared/Error.cshtml
@@ -1,14 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Error";
-}
+﻿<h2>An Error has Occurred.</h2>
+<h3>Title: @ViewData["Title"].</h3>
+<hr />
+<p>Summary: A short summary of the error like this should follow the title.</p>
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
+<h3>Error Details></h3>
+<hr />
+@if (string.IsNullOrWhiteSpace(ViewData["Message"].ToString()))
+{
+    <text>This area would be used for lengthier and more detailed informationm about the error, if any such info is available.</text>
+}}
+@ViewData["Message"];
