--- a/Code/ExternalLogin/Views/Shared/_Layout.cshtml
+++ b/Code/ExternalLogin/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
-﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@using Microsoft.AspNetCore.Mvc.Rendering
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ExternalLogin</title>
+    <title>@ViewData["Title"] - External Logins</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -46,7 +47,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - ExternalLogin</p>
+            <p>&copy; 2017 - Erisia</p>
         </footer>
     </div>
 
