--- a/Code/ExternalLogins.Facebook/Views/Account/Login.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Account/Login.cshtml
@@ -1,10 +1,7 @@
 ﻿@using System.Collections.Generic
-@using System.Linq
-@using ExternalLogins.Facebook.ViewModels.Account
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@using Microsoft.AspNetCore.Mvc.Rendering
-@model ExternalLogins.Facebook.ViewModels.Account.LoginViewModel
+@model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
@@ -15,17 +12,15 @@
 <div class="row">
     <div class="col-md-8">
         <section>
-            <form asp-controller="Account" asp-action="Login" asp-all-route-data-test="Hello" method="post" class="form-horizontal">
+            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
-                @*NB Replace with partial!*@
-                @*@Html.Partial("_LoginInputsPartial")*@
                 <div class="form-group">
                     <label asp-for="Email" class="col-md-2 control-label"></label>
                     <div class="col-md-10">
-                        <input asp-for="UserName" class="form-control" />
-                        <span asp-validation-for="UserName" class="text-danger"></span>
+                        <input asp-for="Email" class="form-control" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -51,7 +46,7 @@
                     </div>
                 </div>
                 <p>
-                    <a asp-action="Register" asp-route-returnurl="@Model.ReturnUrl">Register as a new user?</a>
+                    <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
                 </p>
                 <p>
                     <a asp-action="ForgotPassword">Forgot your password?</a>
