Local register and login working.

--- a/Code/ExternalLogins.Facebook/Views/Account/Login.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Account/Login.cshtml
@@ -89,4 +89,9 @@
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+    <script>
+        $(function() {
+            $("#Email").val("brady@bradykelly.net");
+        });
+    </script>
 }
