Moving slowly. Distractred by appearance.

--- a/Code/ExternalLogins.Facebook/wwwroot/css/erisia.css
+++ b/Code/ExternalLogins.Facebook/wwwroot/css/erisia.css
@@ -1,2 +1,12 @@
-﻿body {
+﻿/* COLOURS */
+
+
+/* Text */
+.caution {
+    color: goldenrod;
+}
+
+a.caution-link:hover {
+    color: gold;
+    font-weight: bold;
 }
