--- a/Code/ExternalLogins.Facebook/Views/Account/Login.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
 ﻿@using System.Collections.Generic
+@using System.Linq
+@using ExternalLogins.Facebook.Models.ExternalAuth
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
 @model LoginViewModel
@@ -59,8 +61,8 @@
             <h4>Use another service to log in.</h4>
             <hr />
             @{
-                var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
-                if (loginProviders.Count == 0)
+                var loginProviders = SignInManager.GetExternalAuthenticationSchemes();
+                if (!loginProviders.Any())
                 {
                     <div>
                         <p>
@@ -72,14 +74,27 @@
                 else
                 {
                     <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                        <div>
-                            <p>
+                        <ul>
+                            <li>
                                 @foreach (var provider in loginProviders)
                                 {
+                                    //NO special FB button yet.
+                                    @*if (provider.AuthenticationScheme == ExternalAuthModel.Facebook.Scheme)
+                                    {
+                                        <div class="fb-login-button"
+                                             data-max-rows="1"
+                                             data-size="large"
+                                             data-button-type="login_with"
+                                             data-show-faces="false"
+                                             data-auto-logout-link="false"
+                                             data-use-continue-as="false">                                            
+                                        </div>
+                                        continue;
+                                    }*@
                                     <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
                                 }
-                            </p>
-                        </div>
+                            </li>
+                        </ul>
                     </form>
                 }
             }
@@ -90,7 +105,7 @@
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
     <script>
-        $(function() {
+        $(function () {
             $("#Email").val("brady@bradykelly.net");
         });
     </script>
