Quick tidy ups before starting work properly on login issue.

--- a/Code/ExternalLogins.Facebook/Views/Bookings/Index.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Bookings/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<ExternalLogins.Facebook.Data.Models.Booking>
+@model System.Collections.Generic.IEnumerable<ExternalLogins.Facebook.Data.Models.Booking>
 
 @{
     ViewData["Title"] = "Index";
@@ -39,7 +39,6 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
