Added dummy data html table.

--- a/Code/ExternalLogins.Facebook/Views/Shared/_Layout.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - ExternalLogins.Facebook</p>
+            <p>&copy; 2017 - Brady Kelly</p>
         </footer>
     </div>
 
