--- a/Code/ExternalLogins.Facebook/Views/Bookings/Index.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Bookings/Index.cshtml
@@ -1,14 +1,10 @@
 @model System.Collections.Generic.IEnumerable<ExternalLogins.Facebook.Data.Models.Booking>
-
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h2>Requested Bookings</h2>
+<hr />
 <table class="table">
     <thead>
         <tr>
@@ -21,7 +17,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -36,10 +31,6 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
