Added a Twitter  login as a counterpoint. 	Twitter doesn't strike me as too stable here.

--- a/Code/ExternalLogins.Facebook/Views/Manage/ManageLogins.cshtml
+++ b/Code/ExternalLogins.Facebook/Views/Manage/ManageLogins.cshtml
@@ -1,11 +1,11 @@
 ﻿@model ManageLoginsViewModel
 @using Microsoft.AspNetCore.Http.Authentication
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["Title"] = "Manage External Logins";
 }
 
 <h2>@ViewData["Title"].</h2>
-
+<hr />
 <p class="text-success">@ViewData["StatusMessage"]</p>
 @if (Model.CurrentLogins.Count > 0)
 {
